--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <title>Contact the Croissant</title>
 </head>
 <body>
-    
+    <h1>🥐 Contact Us</h1>
+
+    <p>Contact us at hello@croissant.com for more information and delicious recipes.</p>
+    <div class="nav-links">
+        <a href="/">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
+        </div>
 </body>
+
 </html>
