Added styling and background color

--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>🥐 Photo of a delicious croissant</h1>
-    <img src="/images/pexels-skylar-kang-6207315.jpg" alt="croissant">
+    <img src="/images/pexels-skylar-kang-6207315 (1).jpg" class="img-fluid" alt="croissant">
     <div class="nav-links">
         <a href="/">Homepage</a>
         <a href="/photo.html">Photo</a>
