Configured site to make it SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dedicated to the delicious and flaky pastry, the croissant.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>Croissant</title>
+    <title>The best croissants in Toronto | Croissant Bakery</title>
 </head>
 <body>
     <h1>🥐 Croissant</h1>
     <p>
         Croissants and other viennoiserie are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.</p>
 <div class="nav-links">
-<a href="/">Homepage</a>
-<a href="/photo.html">Photo</a>
-<a href="/contact.html">Contact</a>
+<a href="/" title="Croissant Homepage">Homepage</a>
+<a href="/photo.html" title="Picture of a croissant">Photo</a>
+<a href="/contact.html" title="Contact Us">Contact</a>
 </div>
     </body>
 </html>
