--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1>🥐 Croissant</h1>
     <p>
         Croissants and other viennoiserie are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.</p>
-<div class="nav-links">
+<br>
+<p>Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity.[4] Croissants have long been a staple of Austrian and French bakeries and pâtisseries. The modern croissant was developed in the early 20th century. In the late 1970s, the development of factory-made, frozen, pre-formed but unbaked dough made them into a fast food that can be freshly baked by unskilled labor. The croissant bakery, notably the La Croissanterie chain, was a French response to American-style fast food,[5] and as of 2008, 30–40% of the croissants sold in French bakeries and patisseries were baked from frozen dough.</p>
+        <div class="nav-links">
 <a href="/" title="Croissant Homepage">Homepage</a>
 <a href="/photo.html" title="Picture of a croissant">Photo</a>
 <a href="/contact.html" title="Contact Us">Contact</a>
